// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> accepts className props 1`] = `
<div
  className="carousel center"
>
  <a
    className="carousel-item"
    key=".0"
  >
    <img
      src="https://lorempixel.com/250/250/nature/1"
    />
  </a>
  <a
    className="carousel-item"
    key=".1"
  >
    <img
      src="https://lorempixel.com/250/250/nature/2"
    />
  </a>
  <a
    className="carousel-item"
    key=".2"
  >
    <img
      src="https://lorempixel.com/250/250/nature/3"
    />
  </a>
  <a
    className="carousel-item"
    key=".3"
  >
    <img
      src="https://lorempixel.com/250/250/nature/4"
    />
  </a>
</div>
`;

exports[`<Carousel /> accepts external \`id\` value 1`] = `
<div
  className="carousel"
  id="ID"
>
  <a
    className="carousel-item"
    key=".0"
  >
    <img
      src="https://lorempixel.com/250/250/nature/1"
    />
  </a>
  <a
    className="carousel-item"
    key=".1"
  >
    <img
      src="https://lorempixel.com/250/250/nature/2"
    />
  </a>
  <a
    className="carousel-item"
    key=".2"
  >
    <img
      src="https://lorempixel.com/250/250/nature/3"
    />
  </a>
  <a
    className="carousel-item"
    key=".3"
  >
    <img
      src="https://lorempixel.com/250/250/nature/4"
    />
  </a>
</div>
`;

exports[`<Carousel /> handles content slides 1`] = `
<div
  className="carousel"
>
  <div
    className="red carousel-item"
    key=".0"
  >
    <h2>
      First Panel
    </h2>
    <p>
      This is your first panel
    </p>
  </div>
</div>
`;

exports[`<Carousel /> handles full width sliders 1`] = `
<div
  className="carousel carousel-slider"
>
  <a
    className="carousel-item"
    key=".0"
  >
    <img
      src="https://lorempixel.com/250/250/nature/1"
    />
  </a>
  <a
    className="carousel-item"
    key=".1"
  >
    <img
      src="https://lorempixel.com/250/250/nature/2"
    />
  </a>
  <a
    className="carousel-item"
    key=".2"
  >
    <img
      src="https://lorempixel.com/250/250/nature/3"
    />
  </a>
  <a
    className="carousel-item"
    key=".3"
  >
    <img
      src="https://lorempixel.com/250/250/nature/4"
    />
  </a>
</div>
`;

exports[`<Carousel /> renders 1`] = `
<div
  className="carousel"
>
  <a
    className="carousel-item"
    key=".0"
  >
    <img
      src="https://lorempixel.com/250/250/nature/1"
    />
  </a>
  <a
    className="carousel-item"
    key=".1"
  >
    <img
      src="https://lorempixel.com/250/250/nature/2"
    />
  </a>
  <a
    className="carousel-item"
    key=".2"
  >
    <img
      src="https://lorempixel.com/250/250/nature/3"
    />
  </a>
  <a
    className="carousel-item"
    key=".3"
  >
    <img
      src="https://lorempixel.com/250/250/nature/4"
    />
  </a>
</div>
`;

exports[`<Carousel /> renders fixed items 1`] = `
<div
  className="carousel"
>
  <div
    className="carousel-fixed-item center"
  >
    <span>
      Do you rock!?
    </span>
  </div>
  <a
    className="carousel-item"
    key=".0"
  >
    <img
      src="https://lorempixel.com/250/250/nature/1"
    />
  </a>
  <a
    className="carousel-item"
    key=".1"
  >
    <img
      src="https://lorempixel.com/250/250/nature/2"
    />
  </a>
  <a
    className="carousel-item"
    key=".2"
  >
    <img
      src="https://lorempixel.com/250/250/nature/3"
    />
  </a>
  <a
    className="carousel-item"
    key=".3"
  >
    <img
      src="https://lorempixel.com/250/250/nature/4"
    />
  </a>
</div>
`;
